correction mineure sur collapse

--- a/src/components/Collapse/collapse.scss
+++ b/src/components/Collapse/collapse.scss
@@ -42,7 +42,7 @@
     .collapse-content {
         overflow: hidden;
         max-height: 0;
-        transition: max-height 0.5s ease;
+        transition: max-height 0.3s ease;
         background-color: #F6F6F6;
         border-radius: 0 0 0.5rem 0.5rem;
     }
